# equalization-rate-options-design

./: .gitignore  README.md  pyproject.toml  work-until-now.md
configs/: analysis.yaml  contracts.yaml  events.yaml  events_auto.yaml  synthetic.yaml
data/samples/: sample_funding.csv
notebooks/: 01_synthetic_sanity.ipynb  02_funding_descriptives.ipynb  03_calibration.ipynb  04_premium_surfaces.ipynb  04b_ci_diagnostics.ipynb  04c_pricing_functionals.ipynb  05_model_validation.ipynb  05b_model_validation_clustered.ipynb  05c_model_risk_hardening.ipynb  06_hedge_frontiers.ipynb  06_hedge_frontiers_v2.ipynb
reports/markdown/: data_qa.md  data_qa_binance.md  data_qa_bitmex.md  data_qa_bybit.md  data_qa_deribit.md
scripts/: build_dataset.py  fetch_binance.py  fetch_bitmex.py  fetch_bybit.py  fetch_deribit.py  qa_dataset.py  run_descriptives.py  run_event_studies.py  run_frontier.py  run_premium_grid.py
src/ddx/: __init__.py  bootstrap.py  calibration.py  capital.py
src/ddx/backtest/: hedges.py  rolling.py  walkforward.py
src/ddx/data/: io.py  preprocess.py  schema.py
src/ddx/models/: cluster_semi_markov.py  regime_evt.py  simulation.py
src/ddx/payoffs/: __init__.py  distress.py  floor.py  stoploss.py
src/ddx/pricing/: premium.py
src/ddx/risk/: metrics.py
tests/: test_bootstrap.py  test_calibration.py  test_capital.py  test_cluster_semi_markov.py  test_loss_metrics.py  test_normalization.py  test_payoffs.py  test_premium.py  test_regime_evt.py  test_regularity.py  test_rolling_engine.py  test_swap_estimators.py  test_units.py  test_walkforward.py
(+5 files in other folders)
